z-index discalier fix

--- a/css/style.css
+++ b/css/style.css
@@ -175,7 +175,7 @@ video:hover {
   width: 100%;
   height: 100%;
   background: #000;
-  z-index: 101;
+  z-index: 100;
   align-items: center;
   text-align: center;
   justify-content: center;
@@ -517,7 +517,7 @@ Keywords
   color: #fff;
   border: 1px solid #fff;
   border-color: #fff;
-  z-index: 100;
+  z-index: 80;
   padding: 25px;
   right: 15px;
   bottom: 15px;
